--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,9 @@
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==23.2.0
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-distro==1.9.0
-gitdb==4.0.11
-GitPython==3.1.43
 groq==0.5.0
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-Jinja2==3.1.3
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
+huggingface-hub==0.22.2
 notion-client==2.2.1
 numpy==1.26.4
-openai==1.23.2
-packaging==24.0
-pandas==2.2.2
-pillow==10.3.0
-protobuf==4.25.3
-pyarrow==15.0.2
-pydantic==2.7.0
-pydantic_core==2.18.1
-pydeck==0.8.1b0
-Pygments==2.17.2
-python-dateutil==2.9.0.post0
+openai==1.23.6
 python-dotenv==1.0.1
-pytz==2024.1
-referencing==0.34.0
 requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
 streamlit==1.33.0
-tenacity==8.2.3
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.2
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
+yfinance==0.2.38
