--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,135 @@
+accelerate==0.29.3
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+anyio==4.3.0
+appdirs==1.4.4
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+dataclasses-json==0.6.5
+datasets==2.19.0
+Deprecated==1.2.14
+dill==0.3.8
+dirtyjson==1.0.8
+distro==1.9.0
+dnspython==2.6.1
+email_validator==2.1.1
+evaluate==0.4.2
+fastapi==0.111.0
+fastapi-cli==0.0.3
+filelock==3.13.4
+frozendict==2.4.2
+frozenlist==1.4.1
+fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
 groq==0.5.0
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 huggingface-hub==0.22.2
+idna==3.7
+Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+llama-index==0.10.36
+llama-index-agent-openai==0.2.4
+llama-index-cli==0.1.12
+llama-index-core==0.10.36
+llama-index-embeddings-openai==0.1.9
+llama-index-indices-managed-llama-cloud==0.1.6
+llama-index-legacy==0.9.48
+llama-index-llms-openai==0.1.18
+llama-index-multi-modal-llms-openai==0.1.5
+llama-index-program-openai==0.1.6
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.22
+llama-index-readers-llama-parse==0.1.4
+llama-parse==0.4.2
+llamaindex-py-client==0.1.19
+lxml==5.2.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.2
+mdurl==0.1.2
+minijinja==1.0.16
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+multitasking==0.0.11
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.8.1
 notion-client==2.2.1
 numpy==1.26.4
 openai==1.23.6
+orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+peewee==3.17.3
+pillow==10.3.0
+protobuf==4.25.3
+psutil==5.9.8
+pyarrow==16.0.0
+pyarrow-hotfix==0.6
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.0b1
+Pygments==2.17.2
+pypdf==4.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.0
+regex==2024.4.28
 requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+safetensors==0.4.3
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
+starlette==0.37.2
 streamlit==1.33.0
+striprtf==0.0.26
+sympy==1.12
+tenacity==8.2.3
+tiktoken==0.6.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.3.0
+tornado==6.4
+tqdm==4.66.2
+transformers==4.40.1
+typer==0.12.3
+typing-inspect==0.9.0
+typing_extensions==4.11.0
+tzdata==2024.1
+ujson==5.9.0
+urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+webencodings==0.5.1
+websockets==12.0
+wrapt==1.16.0
+xxhash==3.4.1
+yarl==1.9.4
 yfinance==0.2.38
