Added Authentication code

--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,9 @@
 GROQ_API_KEY=YOUR_API_KEY
 OPENWEATHER_API_KEY=YOUR_API_KEY
 OPENAI_API_KEY=YOUR_API_KEY
+
+
+AUTH0_DOMAIN = YOUR_AUTH0_DOMAIN.us.auth0.com
+AUTH0_API_AUDIENCE = https://YOUR_API_NAME-auth0-example.com
+AUTH0_ISSUER = https://YOUR_AUTH0_DOMAIN.us.auth0.com/
+AUTH0_ALGORITHMS = RS256
